make aricle's header and intro part

--- a/index.html
+++ b/index.html
@@ -46,6 +46,44 @@
 
     <main>
         <article class="article">
+            <header class="article-header">
+                <div class="article-header__container">
+                    <p class="article-header__tag">Химия</p>
+                    <h1 class="article-header__title">Углеводы</h1>
+                    <p class="article-header__subtitle">Строение, виды и роль в жизни живых организмов</p>
+                </div>
+            </header>
+            <section class="width-770">
+                <p class="article-lead">Первое практическое знакомство человека с углеводами известно еще с глубокой древности. Обработка древесины, изготовление бумаги и тканей, хлебопечение, брожение – все эти процессы непосредственно связаны с переработкой углеводсодержащего сырья.</p>
+                <p>Углеводы входят в состав всех живых организмов, они составляют около 80% от сухой массы растений, а полисахарид целлюлоза является самым распространенным органическим веществом на Земле.</p>
+                <p class="article__contents-title">Содержание:</p>
+                <ol class="article__contents-list list-reset">
+                    <li class="article__contents-item">
+                        <a href="#first-section" class="article__contents-link">Определение, классификация и строение углеводов</a>
+                    </li>
+                    <li class="article__contents-item">
+                        <a href="#second-section" class="article__contents-link">Cтроение моносахаридов. Глюкоза, фруктоза</a>
+                    </li>
+                    <li class="article__contents-item">
+                        <a href="#third-section" class="article__contents-link">Дисахариды, сахароза</a>
+                    </li>
+                    <li class="article__contents-item">
+                        <a href="#forth-section" class="article__contents-link">Роль углеводов</a>
+                    </li>
+                </ol>
+            </section>
+            <section class="width-770" id="first-section">
+                <h2 class="section-title">Определение, классификация и строение углеводов</h2>
+            </section>
+            <section class="width-770" id="second-section">
+                <h2 class="section-title">Строение моносахаридов. Глюкоза, фруктоза</h2>
+            </section>
+            <section class="width-770" id="third-section">
+                <h2 class="section-title">Дисахариды</h2>
+            </section>
+            <section class="width-770" id="forth-section">
+                <h2 class="section-title">Роль углеводов</h2>
+            </section>
         </article>
     </main>
 
